Cleans up tests and swagger
