# swagger.yaml
@@ -8,19 +8,30 @@ consumes:
 produces:
   - application/json
 paths:
-  '/{repository}/applications':
+  '/namespaces':
     get:
-      description: Get all applications for this repository
+      description: Get all namespaces
+      operationId: getAllNamespaces
+      responses:
+        '200':
+          description: The request was for a namespaces
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Namespace'
+  '/namespaces/{namespace}/applications':
+    get:
+      description: Get all applications for this namespace
       operationId: getAllApplications
       responses:
         '200':
-          description: The request was for a repository and applications exist within that repository
+          description: The request was for a namespace and applications exist within that namespace
           schema:
             type: array
             items:
               $ref: '#/definitions/Application'
         '404':
-          description: The request was for a repository that does not exist
+          description: The request was for a namespace that does not exist
           schema:
             $ref: '#/definitions/Error'
     post:
@@ -40,7 +51,7 @@ paths:
           schema:
             $ref: '#/definitions/Error'
         '404':
-          description: The repository and application does not exist
+          description: The namespace and application does not exist
           schema:
             $ref: '#/definitions/Error'
       parameters:
@@ -61,40 +72,40 @@ paths:
           type: file
         #   format: byte
     parameters:
-      - $ref: '#/parameters/repository'
-  '/{repository}/apps/{application}/images':
+      - $ref: '#/parameters/namespace'
+  '/namespaces/{namespace}/apps/{application}/images':
     get:
-      description: Get all built images for the application in the repository
+      description: Get all built images for the application in the namespace
       operationId: getImageRevisions
       responses:
         '200':
-          description: The request was for a valid repository and application
+          description: The request was for a valid namespace and application
           schema:
             type: array
             items:
               $ref: '#/definitions/Image'
         '404':
-          description: The request was for a repository or application that does not exist
+          description: The request was for a namespace or application that does not exist
           schema:
             $ref: '#/definitions/Error'
     parameters:
-      - $ref: '#/parameters/repository'
+      - $ref: '#/parameters/namespace'
       - $ref: '#/parameters/application'
-  '/{repository}/apps/{application}/images/{revision}':
+  '/namespaces/{namespace}/apps/{application}/images/{revision}':
     get:
       description: Get the image for the specfied revision of the application within the repo
       operationId: getImage
       responses:
         '200':
-          description: The request was for a valid repository and application and revision
+          description: The request was for a valid namespace and application and revision
           schema:
             $ref: '#/definitions/Image'
         '404':
-          description: The request was for a repository or application that does not exist
+          description: The request was for a namespace or application that does not exist
           schema:
             $ref: '#/definitions/Error'
     parameters:
-      - $ref: '#/parameters/repository'
+      - $ref: '#/parameters/namespace'
       - $ref: '#/parameters/application'
       - $ref: '#/parameters/revision'
 definitions:
@@ -118,6 +129,17 @@ definitions:
           - created
           - size
           - imageId
+  Namespace:
+    description: A namespace
+    allOf:
+      - $ref: '#/definitions/Links'
+      - type: object
+        properties:
+          name:
+            description: The name of the application
+            type: string
+        required:
+          - name
   Application:
     description: An application
     allOf:
@@ -161,10 +183,10 @@ definitions:
     required:
       - _links
 parameters:
-  repository:
-    name: repository
+  namespace:
+    name: namespace
     in: path
-    description: The Docker repository name
+    description: The Docker namespace name
     required: true
     type: string
   application:
